--- a/Presentation/EDergi.WebPageUI/Views/Shared/_Header.cshtml
+++ b/Presentation/EDergi.WebPageUI/Views/Shared/_Header.cshtml
@@ -68,9 +68,8 @@
                                     <nav id="mobile-menu">
                                         <ul>
                                             <li>
-                                                <a asp-controller="Home" asp-action="Index">Home</a>
+                                                <a href="Home/Index.cshtml">Home</a>
                                             </li>
-
                                             <li>
                                                 <a href="Hakkında.html">
                                                     Hakkında
@@ -165,9 +164,8 @@
                                     <nav id="mobile-menu">
                                         <ul>
                                             <li>
-                                                <a asp-controller="Home" asp-action="Index">Home</a>
+                                                <a href="Home/Index.cshtml">Home</a>
                                             </li>
-
                                             <li>
                                                 <a href="Hakkında.html">
                                                     Hakkında
