--- a/Presentation/EDergi.WebPageUI/Areas/Admin/Views/Magazine/Create.cshtml
+++ b/Presentation/EDergi.WebPageUI/Areas/Admin/Views/Magazine/Create.cshtml
@@ -36,9 +36,20 @@
                     </div>
                     <div class="form-group mb-3">
                         <label asp-for="Period"></label>
-                        <input asp-for="Period" class="form-control" />
+                        <select asp-for="Period" class="form-control">
+                            <option value="">Periyot Seçiniz</option>
+                            <option value="Yılda 1 Sayı">Yılda 1 Sayı</option>
+                            <option value="Yılda 2 Sayı">Yılda 2 Sayı</option>
+                            <option value="Yılda 3 Sayı">Yılda 3 Sayı</option>
+                            <option value="Yılda 4 Sayı">Yılda 4 Sayı</option>
+                            <option value="Yılda 5 Sayı">Yılda 5 Sayı</option>
+                            <option value="Yılda 6 Sayı">Yılda 6 Sayı</option>
+                            <option value="Yılda 7 Sayı">Yılda 7 Sayı</option>
+                            <option value="Yılda 12 Sayı">Yılda 12 Sayı</option>
+                        </select>
                         <span asp-validation-for="Period" class="text-danger"></span>
                     </div>
+
                     <div class="form-group mb-3">
                         <label asp-for="Purpose"></label>
                         <textarea asp-for="Purpose" class="form-control"></textarea>
