--- a/Presentation/EDergi.WebPageUI/Views/Shared/Components/Magazine/Default.cshtml
+++ b/Presentation/EDergi.WebPageUI/Views/Shared/Components/Magazine/Default.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Dergiler";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+  
 }
 
 <style>
@@ -101,7 +101,7 @@
     }
 </style>
 
-<div class="container mt-4">
+@* <div class="container mt-4">
     <!-- 🔍 ARAMA -->
     <div class="search-wrap">
         <div class="search-area">
@@ -113,7 +113,7 @@
         <div class="mt-2" style="color:#7a7a7a; font-size:.9rem;">
             Başlık, açıklama, ISSN ve daha fazlası ile ara
         </div>
-    </div>
+    </div> *@
 
     <h1 class="text-center mb-4">Dergiler</h1>
 
