--- a/Presentation/EDergi.WebPageUI/Views/Shared/_MagazinesPartial.cshtml
+++ b/Presentation/EDergi.WebPageUI/Views/Shared/_MagazinesPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<EDergi.Application.DTOs.MagazineCreateDto>
+﻿@* @model List<EDergi.Application.DTOs.MagazineCreateDto>
 
 @if (Model == null || !Model.Any())
 {
@@ -29,3 +29,4 @@ else
         }
     </div>
 }
+ *@
