--- a/Presentation/EDergi.WebPageUI/Views/Shared/_Header.cshtml
+++ b/Presentation/EDergi.WebPageUI/Views/Shared/_Header.cshtml
@@ -68,8 +68,9 @@
                                     <nav id="mobile-menu">
                                         <ul>
                                             <li>
-                                                <a href="Home/Index.cshtml">Home</a>
+                                                <a href="/">Home</a>
                                             </li>
+
                                             <li>
                                                 <a href="Hakkında.html">
                                                     Hakkında
@@ -164,8 +165,9 @@
                                     <nav id="mobile-menu">
                                         <ul>
                                             <li>
-                                                <a href="Home/Index.cshtml">Home</a>
+                                                <a href="/">Home</a>
                                             </li>
+
                                             <li>
                                                 <a href="Hakkında.html">
                                                     Hakkında
